# ros2-gazebo-drake-sims

diff_drive_proj/: .gitignore  README
diff_drive_proj/data/: animated_graph.py  data.csv  old_data.csv  static_graph.py
diff_drive_proj/launch/: robot_drive_launch.py
diff_drive_proj/robot_sims/: CMakeLists.txt  package.xml
diff_drive_proj/robot_sims/include/: GazeboRosPositionPlugin.hh
diff_drive_proj/robot_sims/src/: GazeboRosPositionPlugin.cpp
diff_drive_proj/src/robot_controller/: CMakeLists.txt  package.xml
diff_drive_proj/src/robot_controller/include/robot_controller/: pid_controller.hpp
diff_drive_proj/src/robot_controller/src/: pid_controller.cpp  robot_controller.cpp  trajectory_server.cpp
diff_drive_proj/src/robot_msgs/: CMakeLists.txt  package.xml
drake_flap/: .bazelrc  .gitignore  MODULE.bazel  README  WORKSPACE
drake_flap/fourbar/: BUILD.bazel
drake_flap/fourbar_cmake/: CMakeLists.txt  sdf_sim.cc
drake_flap/fourbar_cmake/models/: wing_asm.sdf
drake_flap/fourbar_cmake/src/: CMakeLists.txt  sdf_sim.cc  sdf_sim2.cc
flapping_proj/: .gitignore  README  inertial_properties.py  main_graphical.py  processed.sdf
flapping_proj/data/: README  aero_plot.py  all_data.py  constrained_flap.csv  data_process.py  falling_flapping_data.csv  inplace_flapping_data.csv  test.py
flapping_proj/data/15b_50hz_bigArea_withAero/: aero_plotsaero_data.txt
flapping_proj/data/15b_50hz_low_damp_high3_spring/: aero_plotsaero_data.txt
flapping_proj/data/15b_50hz_low_damp_high4_spring/: aero_plotsaero_data.txt
flapping_proj/data/15b_50hz_low_damp_high4_spring_withAero/: aero_plotsaero_data.txt
flapping_proj/data/big_wing/: aero_plotsaero_data.txt
flapping_proj/data/big_wing_30hz/: URDF_LargeWings.sdf  aero_plotsaero_data.txt
flapping_proj/data/big_wing_30hz_p/: URDF_LargeWings.sdf  aero_plotsaero_data.txt
flapping_proj/data/big_wing_50hz/: aero_plotsaero_data.txt
flapping_proj/data/big_wing_50hz_pitched/: aero_plotsaero_data.txt
flapping_proj/data/big_wing_50hz_pitched_aero_applied/: aero_plotsaero_data.txt
flapping_proj/data/big_wing_fly/: aero_plotsaero_data.txt
flapping_proj/data/falling/: falling_data.csv
flapping_proj/data/scripts/: aero_plot.py  data_process.py  input_plot.py  pid_plot.py
flapping_proj/gazebo/: Aerodynamics.cpp  Aerodynamics.hpp  CMakeLists.txt  JointControl.hpp  OdometryState.cpp  OdometryState.hpp  README  URDF_LargeWings.sdf  VelocityControl.cpp  VelocityControl.hpp  building_robot.sdf  flap_mini.sdf  flapping.sdf  flapping_old.sdf  hardrobot.sdf  hardrobot_stiff_op.sdf  wing_asm.sdf
flapping_proj/gui/: README  main.py  main.ui
flapping_proj/gui/libs/: i_config_window_handler.py  ui_config_assist.py
flapping_proj/gui/source/: grass.ui  main.ui
flapping_proj/gui/ui_handler/: grass_handler.py  module_selection_handler.py
flapping_proj/gui/ui_scripts/: grass_ui.py
flapping_proj/launch/: hardrobot_launch.py  hardrobot_stiff_launch.py  launch.py  opt_launch.py
flapping_proj/optimization/: README  aero_properties.py  approx_wing_amplitude.py  component_classes.py  control_optimization_top.py  cost_update.py  cost_update_lift.py  generate_param_script.py  geometry_classes.py  graph_opt_results.py  graph_stiffness_heatmap.py  inertial_properties.py  joint_angle_update.py  result_grapher.py  sdf_generate.py  sdf_modify_stiffness.py  sweep_optimization_top.py  top_level.py  wing_classes.py  wing_geometry_modeling.py.py
flapping_proj/optimization/assets/: tri_wing_equations.txt  wing_asm.SLDASM
flapping_proj/optimization/data/: .gitignore  config.json  input_config.json  input_joint_data.csv  iterative_wing.sdf  processed.sdf  processed_work.sdf  template.sdf
flapping_proj/qtdesign/: main.py  untitled.ui
flapping_proj/ros2/src/flapping_controller/: CMakeLists.txt  package.xml
flapping_proj/ros2/src/flapping_controller/src/: control_node.cpp  pid_controller.cpp  torque_publisher.cpp
flapping_proj/unit_tests/: README  test_aero_properties  test_aero_properties.py  test_film_inertial_properties.py  test_inertial_preperties.py  test_rod_inertial_properties.py  test_wing_classes.py
flapping_proj/utils/: message.py
gazebo/: .gitignore  CMakeLists.txt  DiffDrive.cpp  DiffDrive.hpp  README  building_robot.sdf  new_diff_drive_plugin.cpp  new_diff_drive_plugin.hpp  test_plugin.cpp  test_plugin.hpp
urdf-sdf/: URDF_Bodies.urdf  URDF_Bodies2.SLDASM.urdf  building_robot.sdf  flapping.sdf
urdf-sdf/URDF_Bodies/: CMakeLists.txt  package.xml
urdf-sdf/URDF_Bodies.2/: CMakeLists.txt  package.xml
urdf-sdf/URDF_Bodies.2/config/: joint_names_URDF_Bodies.2.yaml
urdf-sdf/URDF_Bodies.2/launch/: display.launch  gazebo.launch
urdf-sdf/URDF_Bodies.2/meshes/: LW_Flap.STL  LW_Pitch.STL  RW_Flap.STL  RW_Pitch.STL  base_link.STL
urdf-sdf/URDF_Bodies.2/urdf/: URDF_Bodies.2.csv  URDF_Bodies.2.urdf
urdf-sdf/URDF_Bodies/config/: joint_names_URDF_Bodies.yaml
urdf-sdf/URDF_Bodies/launch/: display.launch  gazebo.launch
urdf-sdf/URDF_Bodies/meshes/: LW_Flap.STL  LW_Pitch.STL  RW_Flap.STL  base_link.STL  base_link.dae
urdf-sdf/URDF_Bodies/urdf/: URDF_Bodies.csv
urdf-sdf/URDF_Bodies2.SLDASM/: CMakeLists.txt  package.xml
urdf-sdf/URDF_Bodies2.SLDASM/config/: joint_names_URDF_Bodies2.SLDASM.yaml
urdf-sdf/URDF_Bodies2.SLDASM/launch/: display.launch  gazebo.launch
urdf-sdf/URDF_Bodies2.SLDASM/meshes/: LW_Flap.STL  LW_Pitch.STL  RW_Flap.STL  RW_Pitch.STL
urdf-sdf/URDF_Bodies2.SLDASM/urdf/: URDF_Bodies2.SLDASM.csv  URDF_Bodies2.SLDASM.urdf
urdf-sdf/URDF_LargeWings/: CMakeLists.txt  package.xml
urdf-sdf/URDF_LargeWings/launch/: display.launch  gazebo.launch
urdf-sdf/URDF_LargeWings/meshes/: LW_Flap.STL  LW_Pitch.STL  RW_Flap.STL  RW_Pitch.STL
urdf-sdf/URDF_LargeWings/urdf/: URDF_LargeWings.csv  URDF_LargeWings.urdf
urdf-sdf/URDF_Tiny/: CMakeLists.txt  package.xml
urdf-sdf/URDF_Tiny/launch/: display.launch  gazebo.launch
urdf-sdf/URDF_Tiny/meshes/: LW_Flap.STL  LW_Pitch.STL  RW_Flap.STL  RW_Pitch.STL  (+1 more)
urdf-sdf/convert/: template.sdf  urdf_to_sdf.py
urdf-sdf/hardrobot/: CMakeLists.txt  package.xml
(+23 files in other folders)
